--- a/app/pages/index.jade
+++ b/app/pages/index.jade
@@ -1,9 +1,9 @@
-include ../blocks/index/index
+include ../blocks/form-anketa/form-anketa
 
 extends ../blocks/layout-default/layout-default
 
 block head
-	- var pageTitle = 'CSSSR Project Template';
+	- var pageTitle = 'CSSSR Anketa - Aleksandr Beliaev';
 
 block content
-	+index()
+	+form-anketa()
