--- a/app/blocks/header/header.jade
+++ b/app/blocks/header/header.jade
@@ -1,15 +1,5 @@
 include ../logo/logo
-include ../dark/dark
-include ../title/title
-include ../description/description
 
 mixin header()
-	+b.header&attributes(attributes)
-		+logo
-
-		+e.title
-			+dark
-				+title
-		+e.description
-			+description
-				| Шаблон проекта для быстрого старта
+	+b('header').header&attributes(attributes)
+		+logo('CSSSR', 'h2','logo.png','Секретный архив учреждения')
