--- a/app/blocks/layout-default/layout-default.jade
+++ b/app/blocks/layout-default/layout-default.jade
@@ -1,18 +1,16 @@
 include ../../../node_modules/bemto.jade/bemto.jade
-include ../page/page
+include ../body/body
 include ../header/header
-include ../box/box
-include ../footer/footer
+include ../pagewrapper/pagewrapper
 include ../scripts/scripts
 
 
 doctype html
 html(lang='ru')
 	include ../head/head
-	+page
-		+box
+	+body
+		+pagewrapper
 			+header
 			block content
-			+footer
 
 		+scripts(['app.min.js'])
