--- a/app/blocks/logo/logo.styl
+++ b/app/blocks/logo/logo.styl
@@ -3,7 +3,12 @@
 	left -28px
 	margin-x auto
 	margin-bottom 20px
-	display block
+	position relative
 	width 190px
 	height 148px
 	color #333
+.logo:after
+	content ''
+	position absolute
+	background #000
+	
