--- a/app/blocks/title/title.jade
+++ b/app/blocks/title/title.jade
@@ -1,7 +1,3 @@
-include ../icon/icon
-
-mixin title(data)
+mixin title()
 	+b('h1').title&attributes(attributes)
-		+e.company CSSSR
-		+icon('csssr').title__logo
-		|  Project Template
+		block
