--- a/app/blocks/formitems/formitems.jade
+++ b/app/blocks/formitems/formitems.jade
@@ -1,9 +1,5 @@
 mixin formitems(formitems)
 	each item in formitems
-		+e.item
-			label(for=item.id) #{item.label}
-			- var attributes = item.attributes
-			if attributes
-				input(type=item.type, value=item.value, id=item.id)&attributes(attributes)
-			else 
-				input(type=item.type, value=item.value, id=item.id)
+		+b.formitem
+			+e('label').label(for=item.id) #{item.label}
+			+e('input').input-text(type=item.type, value=item.value, id=item.id)&attributes(item.attributes ? item.attributes : {})
