--- a/app/blocks/header/header.jade
+++ b/app/blocks/header/header.jade
@@ -2,4 +2,4 @@ include ../logo/logo
 
 mixin header()
 	+b('header').header&attributes(attributes)
-		+logo('CSSSR', 'h2','logo.png','Секретный архив учреждения')
+		+logo('CSSSR', 'h2', true, 'Секретный архив учреждения')
