--- a/app/blocks/body/body.styl
+++ b/app/blocks/body/body.styl
@@ -1,9 +1,4 @@
 .page
-	padding-y 20px
-	font-family ptsans
-	color #333
-	background #f1f1f1
-
-	+mobile()
-		padding-top 0
-		padding-bottom 0
+	font-family $ptsans
+	color #2f1b15
+	background url("../images/bg.jpg")
