--- a/app/blocks/logo/logo.styl
+++ b/app/blocks/logo/logo.styl
@@ -1,14 +1,21 @@
-.logo
-	position relative
-	left -28px
-	margin-x auto
-	margin-bottom 20px
-	position relative
-	width 190px
-	height 148px
-	color #333
-.logo:after
-	content ''
-	position absolute
-	background #000
+.mainlogo
+	sprite $logo
 	
+	&:before
+		sprite $stamp
+		content ''
+		display block
+		position absolute
+		top -12px
+		right 0
+	
+	&__hidden
+		display none
+	
+.logogroup
+	
+	&__sublogo
+		font-size 10px
+		position relative
+		left 8px
+		top -2px
