--- a/app/blocks/title/title.styl
+++ b/app/blocks/title/title.styl
@@ -1,14 +1,8 @@
 .title
-	padding 20px
-	font-family cuprum
-	font-size 28px
-	line-height 1
+	font-size 96px
 	text-align center
-
-	&__company
-		font-size 0
-		opacity 0
-
-	&__logo
-		width 84px
-		height 20px
+	sprite $title
+	margin 0 auto 73px
+	
+	&__hidden
+		display none
