--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -1,9 +1,9 @@
-rupture.mobile-cutoff = 540px
-
 @import 'sprites/*'
 @import 'helpers/svg-size'
 @import 'helpers/variables'
 @import 'helpers/mixins'
+@import 'helpers/extends'
+@import 'helpers/general'
 @import 'helpers/fonts'
 @import 'helpers/optimize'
 
