--- a/app/styles/helpers/fonts.styl
+++ b/app/styles/helpers/fonts.styl
@@ -1,2 +1,2 @@
-monospace = "Courier New", Courier, monospace
-ptsans = "PT Sans", Arial, Helvetica, sans-serif
+$monospace = "Courier New", Courier, monospace
+$ptsans = "PT Sans", Arial, Helvetica, sans-serif
