--- a/app/styles/helpers/optimize.styl
+++ b/app/styles/helpers/optimize.styl
@@ -211,6 +211,17 @@ textarea
 [placeholder]:focus::placeholder
 	color transparent
 
+input[type="text"]
+input[type="date"]
+input[type="number"]
+input[type="email"]
+input[type="tel"]
+	background-color transparent
+	border none
+
+fieldset
+	border none
+	
 // Tables
 // ==========================================================================
 
